--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-
-body{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
+  width: 100%;
+  height: 100vh;
 }
 
 .qrCode_Background {
@@ -36,7 +38,6 @@ body{
   font-weight: 700;
   font-size: 15px;
   color: hsl(218, 44%, 22%);
-  font-family: "Outfit", sans-serif;
 }
 
 .qrCode_content {
@@ -44,6 +45,5 @@ body{
   margin-top: 10px;
   font-size: 10px;
   color: hsl(220, 15%, 55%);
-  font-family: "Outfit", sans-serif;
   font-weight: 400;
 }
